# echo

./: .gitignore  CLAUDE.md  README.md
docs/: release.md  stability-plan.md  windows-webview2.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  messageTypes.ts  theme.ts  types.ts
frontend/src/components/: Avatar.tsx  AvatarPreview.tsx  ChatWindow.tsx  HistorySearchView.tsx  MessageBubble.tsx  ScreenshotOverlay.tsx  Sidebar.tsx  emojiCatalog.ts  messageUtils.ts
scripts/: generate-app-icon.ps1  package-windows-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  contact_filter.rs  contact_sync.rs  lib.rs  main.rs  profile_metadata.rs  state.rs  tray.rs  updater.rs  windows_event_log.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/discovery/: broadcast.rs  mod.rs  peer.rs  service.rs
updates/stable/: latest.example.json  latest.json
