[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.8.3", features = ["dialog-all", "shell-open"] }

# mDNS service discovery
mdns-sd = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique ID generation
uuid = { version = "1", features = ["v4"] }

# Get local IP address
local-ip-address = "0.6"

# Logging
log = "0.4"
flexi_logger = "0.29"

# Error handling
anyhow = "1"

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# File / streams
tokio-util = "0.7"
futures = "0.3"

# System username
whoami = "1"

# base64 (optional, we have our own impl but useful for decoding on other side)
base64 = "0.22"

# Randomization (subnet scan IP shuffling)
rand = "0.8"

# Socket options (SO_REUSEADDR, SO_REUSEPORT)
socket2 = "0.5"
